feat(task-service): update BulkTimeoutRequest schema to accept ids+status
